# manga_log

./: .gitignore  manage.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  start.ps1  start.sh
manga_log/: asgi.py  settings.py  urls.py  wsgi.py
manga_log_app/: apps.py  forms.py  models.py  urls.py  views.py
manga_log_app/migrations/: 0001_initial.py  0002_alter_item_image.py  0003_alter_item_image.py  0004_alter_item_image.py  0005_alter_item_category.py
manga_log_app/static/css/: index.css
manga_log_app/templates/: add_item.html  base.html  category_list.html  item_list.html  stats.html  update_item.html
