[project]
name = "manga-log"
version = "0.0.1"
description = ""
authors = [{ name = "Yoru-cyber", email = "carlosmendez170210@gmail.com" }]
license = { text = "GPLv3-or-later" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "django-bootstrap5 (>=25.1,<26.0)",
    "django-bootstrap-icons (>=0.9.0,<0.10.0)",
    "pillow (>=11.1.0,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
